@@ -692,6 +692,8 @@ Example usage:
     (svlength *v*) ; ==> 3
     (svref *v* 1) ; ==> 2
 
+### list->simple-vector and simple-vector->list
+
 ### (assoc key alist) -> cons or nil
 
 `assoc` takes a key and a list of key/value tupels (lists or conses).
