@@ -13,6 +13,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
  * added functionp
  * added make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
  * added simple-string-p
+ * added list->simple-vector and simple-vector->list
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
